Closed Bug 1773513 Opened 3 years ago Closed 3 years ago

Alt space menu makes cursor disappear

Categories

(Core :: Widget: Win32, defect)

Firefox 101
x86_64
Windows 11
defect

Tracking

()

VERIFIED FIXED
103 Branch
Tracking Status
firefox103 --- verified

People

(Reporter: fabrizio, Assigned: handyman)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:101.0) Gecko/20100101 Firefox/101.0

Steps to reproduce:

  1. Place cursor on a page anywhere
  2. Press ALT+Space on Windows
  3. Press ESC once

Actual results:

Cursor disappears, moving it around does not restore it, but clicking does. Moving it outside of Firefox makes it reappear.

Expected results:

Same behavior as other windows applications.

Component: Untriaged → Widget: Win32
OS: Unspecified → Windows 10
Product: Firefox → Core
Hardware: Unspecified → x86_64

David, could you triage this one?

Flags: needinfo?(davidp99)

I cannot reproduce this issue on Windows 10 but I see it on Windows 11. Alt-key combinations had special behavior before that took window focus but that's not happening here. The simple fix it to ignore Alt-key combinations.

Assignee: nobody → davidp99
Flags: needinfo?(davidp99)
OS: Windows 10 → Windows 11

On Windows 11, Alt-Space was opening a system context menu while also hiding the mouse cursor.

Pushed by daparks@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/02a7e948a457 Ignore Alt-key sequences when hiding the cursor on Windows r=cmartin
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch
Flags: qe-verify+

I managed to reproduce this issue on Firefox 102.0(build ID: 20220623063721) on Windows 10 64-bits. Verified as fixed on Firefox 103.0b4(build ID: 20220703190044) and Nightly 104.0a1(build ID: 20220704214252) on Windows 10 64-bits and Windows 11 PRO.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

I suggest disabling this ALT+SPACE as a built in firefox shortcut. I didn’t find any cases when it could be useful to anyone and anytime. As a benefice, it will allow extension use this shortcut.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: