Bug 1773513: Ignore Alt-key sequences when hiding the cursor on Windows r=cmartin

On Windows 11, Alt-Space was opening a system context menu while also hiding the mouse cursor.

Differential Revision: https://phabricator.services.mozilla.com/D148841